--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <head>
         <meta charset="UTF-8"> 
         <title>Encriptador / Desencriptador</title>
-        <meta name="viewport" content="width=device-width">
+        
+         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
         <script src="api/rsa-oaep.js"></script>      
